Fix spacing

--- a/invest/static/css/main.css
+++ b/invest/static/css/main.css
@@ -214,7 +214,7 @@ nav.mb-4, nav.my-4 {
 }
 
 #pullout .row {
-    padding: 15px 0;
+    padding: 30px 0;
 }
 
 #pullout .container {
